# ARK-OS

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  README.md  default.env  install.sh  modem_after_boot.txt  modem_after_simple_connect.txt  mypy.ini  out.txt  pyproject.toml  update_hotspot_name.sh
claude_plan/: CLAUDE.md  P0-path-migration-cleanup.md  P0-security-hardening.md  P1-apt-repository.md  P1-flask-to-fastapi.md  P1-testing-framework.md  P2-vite-migration.md  P2-webrtc-video.md  P3-mavlink2rest.md  P3-zenoh-support.md
extras/: README.md  icm42688p_driver.py
frontend/: ark-proxy.conf  ark-ui.nginx  ark-ws.conf  package.json  vue.config.js
manifests/: autopilot-manager.manifest.json  connection-manager.manifest.json  connections-manager.manifest.json  system-manager.manifest.json
packaging/: Dockerfile.build  PLAN.md  README.md  ark-autopilot-manager.yaml  ark-companion.yaml  ark-connection-manager.yaml  ark-dds-agent.yaml  ark-flight-review.yaml  ark-hotspot-updater.yaml  ark-jetson-can.yaml  ark-logloader.yaml  ark-mavlink-router.yaml  ark-polaris.yaml  ark-rid-transmitter.yaml  ark-rtsp-server.yaml  ark-service-manager.yaml  ark-system-manager.yaml  ark-ui.yaml  assemble_tree.sh  build-packages.sh  build.sh  build_binaries.sh  build_frontend.sh  build_venv.sh  bundle_node.sh  generate.py  install_ark_os.sh  packages.yaml  versions.env
scripts/: create_hotspot_connection.sh  functions.sh  install_ark_ui.sh  install_software.sh  (+1 more)
tests/uart_loopback/: CMakeLists.txt  Makefile  README.md
tests/uart_loopback/src/: main.cpp
(+255 files in other folders)
